2007-03-31  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Added new title screens for Keyring mod and SI Fixes.
	* Added build scripts/instructions for SI Fixes. Also, improved the Keyring
	  make scripts.
	* Added new avatars from Avatar Pack to Keyring mod.
	* You can now patch the keybindings on a per-mod basis. The Keyring mod has
	  been updated to reflect that.

2007-03-29  Marzo Sette Torres Junior <marzojr@yahoo.com>
	Allow mainshp.flx patches. Also, slightly synched BG and SI new game code,
	and removed a few unnecessary palette changes in BG title screen.

2007-03-27  Marzo Sette Torres Junior <marzojr@yahoo.com>
	New vga/usecode generation scripts for Keyring mod.

2007-03-21    <jeff@mini.nerble.net>

	* exult.cc: Fixed a couple bugs involving dragging NPC's onto the map.

2007-03-18  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* minsinf.cc: Made multiracial table patches actually be able to change
	  the built-in skins.
	* content/bgkeyring: changed storage method of graphics to shp files instead
	  of pngs and switched scripts to use expack instead of ipack. Added some
	  instructions on how to build the Keyring mod by yourself. Added several
	  new avatars to choose from, and improved existing ones. Removed generated
	  files (most vga files, the usecode file).

2007-01-15  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Don't print errors when looking for mods and the mods dir doesn't exist.

2007-01-10  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* A few bug fixes/improvements to the Keyring mod.

2007-01-06  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Fixing bug #1628256.

2007-01-02    <jeff@mini.nerble.net>

	* mapedit/ucbrowse.cc (Usecode_browser): Sort columns in usecode
	browser.

2006-12-25  Marzo Sette Torres Junior <marzojr@yahoo.com>
	A few fixes/updates to the Keyring mod.

2006-12-24  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* miscinf.cc: Removing unneeded debug message.