@@ -5,6 +5,9 @@
 	* Added new avatars from Avatar Pack to Keyring mod.
 	* You can now patch the keybindings on a per-mod basis. The Keyring mod has
 	  been updated to reflect that.
+	* Added partial support for patch music files. Ogg files in <PATCH>/music
+	  will now be loaded (if they exist) instead of the corresponding ogg from
+	  <MUSIC>. Still need to do the same for the midi/xmidi/etc.
 
 2007-03-29  Marzo Sette Torres Junior <marzojr@yahoo.com>
 	Allow mainshp.flx patches. Also, slightly synched BG and SI new game code,
